--- a/style.css
+++ b/style.css
@@ -209,6 +209,7 @@ header span{
         background-color: rgba(0, 0, 0, 0.5);
         -webkit-backdrop-filter: blur(6px);
         backdrop-filter: blur(6px);
+        border: 0.1px solid black;
     }
 }
 @media(max-width: 35rem){
