--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
     padding: 0;
     margin: 0;
     box-sizing: border-box;
-    border: 0px solid rgb(88, 0, 0);
+    border: 0.1px solid rgb(88, 0, 0);
     scroll-behavior: smooth;
 }
 
@@ -16,7 +16,7 @@
     color: white;
 }
 main{
-    width: 95%;
+    width: 100%;
     margin: auto;
     display: flex;
     justify-content: space-evenly;
@@ -27,7 +27,6 @@ p{
 }
 .sectiondiv{
     position: relative;
-    width: 20%;
     min-width: 15rem;
     display: flex;
     align-items: center;
@@ -56,9 +55,9 @@ header{
     align-items: center;
     background-color: var(--baseColorInvert);
     padding: 0 1.5rem;
-    width: 100%;
     position: fixed;
     top: 0;
+    width: 100vw;
     z-index: 8;
     overflow: hidden;
     transition: transform 0.2s ease-in-out;
@@ -107,6 +106,7 @@ body{
 nav{
     display: flex;
     justify-content: space-around;
+    margin: 0 2rem;
 }
 .navLink{
     text-decoration: none;
@@ -187,6 +187,9 @@ header span{
     flex-direction: column;
     align-items: center;
 }
+.sideMenu nav span{
+    margin: 0.5rem;
+}
 .sideMenu{
     position: fixed;
     top: 0;
@@ -201,7 +204,19 @@ header span{
     background-color: var(--baseColorInvert);
     transition: 0.5s cubic-bezier(1,.1,.17,1.19);
 }
+.sideMenuBackground{
+    background-color: black;
+    position: fixed;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 9;
+    transition: 0.5s cubic-bezier(1,.1,.17,1.19);
+    opacity: 0;
+    pointer-events: none;
+}
 #moreBtn{
+    margin: 0 2rem;
     display: none;
 }
 @supports (-webkit-backdrop-filter: none) or (backdrop-filter: none) {
@@ -219,9 +234,11 @@ header span{
     .logo p{
         display: none;
     }
-}
-@media(max-width: 35rem){
     #moreBtn{
         display: block;
+    }
+    .sectiondiv{
+        width: 100%;
+        pointer-events: none;
     }
 }
