--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
     padding: 0;
     margin: 0;
     box-sizing: border-box;
-    border: 0.1px solid rgb(88, 0, 0);
+    border: 0px solid rgb(88, 0, 0);
     scroll-behavior: smooth;
 }
 
@@ -33,6 +33,8 @@ p{
     justify-content: center;
     margin: 1rem;
     transition: transform 1s cubic-bezier(.03,.31,.1,.95);
+    flex-wrap: wrap;
+    flex: 1;
 }
 section{
     display: flex;
