--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@
     box-sizing: border-box;
     border: 0px solid rgb(88, 0, 0);
     scroll-behavior: smooth;
+    
 }
 
 :root{
@@ -34,7 +35,7 @@ p{
     margin: 1rem;
     transition: transform 1s cubic-bezier(.03,.31,.1,.95);
     flex-wrap: wrap;
-    flex: 1;
+    flex-basis: 20%;
 }
 section{
     display: flex;
@@ -226,7 +227,6 @@ header span{
         background-color: rgba(0, 0, 0, 0.5);
         -webkit-backdrop-filter: blur(6px);
         backdrop-filter: blur(6px);
-        border: 0.1px solid black;
     }
 }
 @media(max-width: 35rem){
@@ -242,5 +242,6 @@ header span{
     .sectiondiv{
         width: 100%;
         pointer-events: none;
+        flex-basis: unset;
     }
 }
