--- a/style.css
+++ b/style.css
@@ -104,6 +104,7 @@ body{
     height: 1000vh;
     background-image: radial-gradient(rgb(0,0,0,0),rgba(0, 0, 0, 0.842)),url("background.jpg") ;
     background-position: center;
+    -webkit-background-position: center;
     background-size: cover;
     -webkit-background-size: cover;
     background-attachment: fixed;
