--- a/style.css
+++ b/style.css
@@ -104,10 +104,10 @@ body{
     height: 1000vh;
     background-image: radial-gradient(rgb(0,0,0,0),rgba(0, 0, 0, 0.842)),url("background.jpg") ;
     background-position: center;
-    -webkit-background-position: center;
     background-size: cover;
     -webkit-background-size: cover;
     background-attachment: fixed;
+    -webkit-background-attachment: fixed;
     background-repeat: no-repeat;
     color: white;
     font-family: Arial, Helvetica, sans-serif;
