--- a/style.css
+++ b/style.css
@@ -106,9 +106,8 @@ body{
     background-position: center;
     background-size: cover;
     -webkit-background-size: cover;
-    background-attachment: fixed;
-    -webkit-background-attachment: fixed;
-    background-repeat: no-repeat;
+    background-attachment: scroll;
+    -webkit-background-attachment: scroll;
     color: white;
     font-family: Arial, Helvetica, sans-serif;
     font-weight: lighter;
