--- a/style.css
+++ b/style.css
@@ -99,15 +99,19 @@ header{
 .intro .content img{
     width: 100%;
 }
-
+.background{
+    z-index: -1;
+    position: fixed;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    background-size: cover;
+    background-image: radial-gradient(rgb(0,0,0,0),rgba(0, 0, 0, 0.842)),url("background.jpg");
+    background-attachment: fixed;
+}
 body{
     height: 1000vh;
-    background-image: radial-gradient(rgb(0,0,0,0),rgba(0, 0, 0, 0.842)),url("background.jpg") ;
-    background-position: center;
-    background-size: cover;
-    -webkit-background-size: cover;
-    background-attachment: scroll;
-    -webkit-background-attachment: scroll;
     color: white;
     font-family: Arial, Helvetica, sans-serif;
     font-weight: lighter;
