--- a/style.css
+++ b/style.css
@@ -189,14 +189,14 @@ header span{
 }
 .sideMenu{
     position: fixed;
-    top: 0;
+    top: -22rem;
     z-index: 10;
     display: flex;
     align-items: center;
     justify-content: center;
     flex-direction: column;
-    height: 0%;
     width: 100%;
+    height: 20rem;
     overflow: hidden;
     background-color: var(--baseColorInvert);
     transition: 0.5s cubic-bezier(1,.1,.17,1.19);
@@ -246,6 +246,6 @@ header span{
         transition: none;
     }
     .sideMenu{
-        border-bottom: 1px solid black;
+        border: 1px solid black;
     }
 }
