--- a/style.css
+++ b/style.css
@@ -75,8 +75,11 @@ header{
     align-items: center;
     font-size: 3rem;
     text-transform: uppercase;
-    position: absolute;
+    position: fixed;
     top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
     z-index: 10;
     width: 100%;
     height: 100vh;
@@ -189,14 +192,14 @@ header span{
 }
 .sideMenu{
     position: fixed;
-    top: -22rem;
+    top: -1rem;
     z-index: 10;
     display: flex;
     align-items: center;
     justify-content: center;
     flex-direction: column;
     width: 100%;
-    height: 20rem;
+    height: 0%;
     overflow: hidden;
     background-color: var(--baseColorInvert);
     transition: 0.5s cubic-bezier(1,.1,.17,1.19);
