--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
     padding: 0;
     margin: 0;
     box-sizing: border-box;
-    border: 0px solid rgb(88, 0, 0);
+    border: 1px solid rgb(88, 0, 0);
 }
 html{
     scroll-behavior: smooth;
@@ -182,6 +182,9 @@ and CONTENT id has to be "HE"
 .hoverE:hover{
     transform: scale(1.1);
 }
+.hoverE:hover #HE h2{
+    transform: translateZ(4rem) translateX(-50%) translateY(50%);
+}
 
 #HE h2{
     position: absolute;
@@ -189,8 +192,9 @@ and CONTENT id has to be "HE"
     text-shadow: 0 0 10px black;
     top: -1rem;
     left: 50%;
-    transform: translateZ(2rem) translateX(-50%);
+    transform: translateZ(0) translateX(-50%) translateY(0);
     white-space: nowrap;
+    transition: transform 1s ease;
 }
 
 header{
@@ -219,7 +223,7 @@ header{
     left: 0;
     right: 0;
     bottom: 0;
-    z-index: 10;
+    z-index: 20;
     width: 100%;
     height: 100vh;
     overflow: hidden;
@@ -376,13 +380,17 @@ header span{
     .hoverE:hover{
         transform: none;
     }
-    body{
-        background: linear-gradient(rgb(24, 51, 30), rgb(81, 168, 81));
+    .hoverE:hover #HE h2{
+        transform: none;
+        position: fixed;
     }
     .sideMenu{
         border: 1px solid black;
     }
     h1{
         font-size: 2rem;
+    }
+    #popup-window{
+        min-width: 100%;
     }
 }
