--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
     padding: 0;
     margin: 0;
     box-sizing: border-box;
-    border: 1px solid rgb(88, 0, 0);
+    border: 0px solid rgb(88, 0, 0);
 }
 html{
     scroll-behavior: smooth;
@@ -36,6 +36,15 @@ section{
     display: flex;
     justify-content: center;
     width: 100%;
+}
+.evently{
+    display: flex;
+    justify-content: space-evenly;
+}
+.contact a{
+    text-decoration: underline;
+    margin: 0.5rem;
+    margin-left: 1rem;
 }
 body{
     background-size: cover;
@@ -113,7 +122,7 @@ img{
     position: fixed;
     top: 50%;
     left: 50%;
-    transform: translate(-50%,-50%) scale(0.9);
+    transform: translate(-50%,-50%) scale(0.8);
     width: 80%;
     height: 0;
     min-width: 15rem;
