--- a/style.css
+++ b/style.css
@@ -94,6 +94,9 @@ li{
 ::-webkit-scrollbar-thumb:hover {
     border: 2px solid transparent;
 }
+::-webkit-scrollbar-corner {
+    display: none;
+}
 /*IMAGES*/
 .sample{
     width: 50%;
@@ -137,6 +140,7 @@ img{
 }
 #popup-header{
     position: sticky;
+    position: -webkit-sticky;
     top: 0;
     backdrop-filter: blur(6px);
     -webkit-backdrop-filter: blur(6px);
@@ -418,6 +422,12 @@ nav{
     }
     main{
         justify-content: center;
+    }
+    .row{
+        flex-direction: column;
+    }
+    .evently{
+        flex-direction: column;
     }
     .card{
         max-width: 100%;
