--- a/style.css
+++ b/style.css
@@ -39,7 +39,7 @@ section{
 }
 .evently{
     display: flex;
-    justify-content: space-evenly;
+    justify-content: space-around;
 }
 .contact a{
     text-decoration: underline;
@@ -54,6 +54,7 @@ body{
     font-family: Arial, Helvetica, sans-serif;
     font-weight: lighter;
     padding-top: 3rem;
+    height: 500vh;
 }
 p{
     margin: 0.5rem;
@@ -419,6 +420,14 @@ nav{
     #moreBtn{
         display: block;
     }
+    .sideMenu{
+        border: 1px solid black;
+    }
+}
+@media(max-width: 600px), (pointer: coarse){
+    #popup-window{
+        min-width: 100%;
+    }
     main{
         justify-content: center;
     }
@@ -438,14 +447,8 @@ nav{
     .hoverE:hover h3{
         transform: translateY(0) translateZ(0) translateX(-50%);
     }
-    .sideMenu{
-        border: 1px solid black;
-    }
     h1{
         font-size: 2rem;
     }
-    #popup-window{
-        min-width: 100%;
-        top: 100%;
-    }
+    
 }
