--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@
     margin: 0;
     box-sizing: border-box;
     border: 0px solid rgb(88, 0, 0);
+    scrollbar-width: thin;/*firefox*/
 }
 html{
     scroll-behavior: smooth;
@@ -11,7 +12,9 @@ html{
 }
 :root{
     --baseColor: rgb(255, 255, 255);
+    --baseColorOpacity: rgba(255, 255, 255, 0.7);
     --baseColorInvert: rgb(0, 0, 0);
+    --baseColorInvertOPacity: rgba(0, 0, 0, 0.7);
     --cubicBezier: cubic-bezier(0,1,.25,1);
 }
 
@@ -141,9 +144,8 @@ img{
 #popup-header{
     position: sticky;
     position: -webkit-sticky;
+    background-color: var(--baseColorOpacity);
     top: 0;
-    backdrop-filter: blur(6px);
-    -webkit-backdrop-filter: blur(6px);
 }
 #popup-title{
     font-size: 2rem;
@@ -230,6 +232,7 @@ img{
     transform-style: preserve-3d;
 }
 .hoverE:hover{
+    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.5);
 }
 .hoverE:hover h3{
     transform: translateZ(4rem) translate(-50%, 80%);
@@ -251,7 +254,7 @@ header{
     display: flex;
     justify-content: space-between;
     align-items: center;
-    background-color: var(--baseColorInvert);
+    background-color: var(--baseColorInvertOPacity);
     padding: 0 1.5rem;
     position: fixed;
     top: 0;
@@ -351,8 +354,7 @@ nav{
     left: 50%;
     transform: translate(-50%);
     background-color: var(--baseColorInvert);
-    color: var(--baseColor);
-    opacity: .5;
+    color: var(--baseColorOpacity);
     border-radius: 1rem;
     display: flex;
     align-items: center;
@@ -384,7 +386,7 @@ nav{
     height: 0%;
     overflow: hidden;
     background-color: var(--baseColorInvert);
-    transition: all 0.5s var(--cubicBezier);
+    transition: all 0.7s var(--cubicBezier);
 }
 .sideMenuBackground{
     background-color: black;
@@ -403,9 +405,19 @@ nav{
     cursor: pointer;
     font-size: 1.2rem;
 }
+.outdated{
+    font-size: 3rem;
+    display: none;
+    position: fixed;
+}
 @supports (-webkit-backdrop-filter: none) or (backdrop-filter: none) {
-    .sideMenu, header{
+    .sideMenu, header, .toTopBtn{
         background-color: rgba(0, 0, 0, 0.5);
+        -webkit-backdrop-filter: blur(6px);
+        backdrop-filter: blur(6px);
+    }
+    #popup-header{
+        background-color: rgba(255, 255, 255, 0.5);
         -webkit-backdrop-filter: blur(6px);
         backdrop-filter: blur(6px);
     }
@@ -419,6 +431,7 @@ nav{
     }
     #moreBtn{
         display: block;
+        font-size: 1.5rem;
     }
     .sideMenu{
         border: 1px solid black;
@@ -451,3 +464,11 @@ nav{
         font-size: 2rem;
     }
 }
+@media screen and (-ms-high-contrast: active), (-ms-high-contrast: none) {
+    .outdated{
+        display: block;
+    }
+    body *:not(.outdated){
+        display: none;
+    }
+  }
